# rl-task-foundry

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  rl_task_foundry.mimiciv.yaml  rl_task_foundry.mimiciv_demo.yaml  rl_task_foundry.postgres_air.yaml  rl_task_foundry.yaml  rlvr_synth.yaml
artifacts/tmp_configs/: iter39_max_turns.yaml  iter40_selectivity.yaml
docs/: README.md  composer_low_quality_reduction_plan.md  phase0_baseline.md  plan.md  prompt_tuning_log.md  research.md  role_isolation_codebase_research.md  runbook.md  sample_databases.md  spec.md
docs/adr/: 0001-custom-ast-preflight.md  0002-atomic-tools-per-database.md
docs/experiments/: evaluator_subagent.md  first_principles.md  registry.yaml  rubric_dqs_v1.md  tree.md
docs/spec/: atomic-resource-api-v2.md  atomic-tools.md  foundation.md  (+8 more)
scripts/: bootstrap_sample_dbs.sh
tests/: test_abstraction.py  test_accepted_example_metadata.py  test_atomic_tool_generator.py  test_atomic_tool_materializer.py  test_atomic_tools.py  test_budget.py  test_calibration.py  test_checkpoint.py  test_cli_commands.py  test_config.py  test_config_load.py  test_db_pool.py  test_db_smoke.py  test_environment_pipeline_orchestrator.py  test_events.py  test_ground_truth_generator.py  test_integration_core.py  test_path_catalog.py  test_pipeline_orchestrator.py  test_pipeline_solver_orchestrator.py  test_privacy.py  test_provider_resilience.py  test_reasoning_replay_hook.py  test_review_pack.py  test_schema_introspection.py  test_schema_profiler.py  test_sdk_helpers.py  test_shadow_verifier.py  test_solver_backend_openai_agents.py  test_storage.py  test_synthesis_affordance_map.py  test_synthesis_anchor_sampler.py  test_synthesis_backend_openai_agents.py  test_synthesis_bundle_exporter.py  test_synthesis_canonicalize.py  test_synthesis_contracts.py  test_synthesis_coverage_planner.py  test_synthesis_environment_registry.py  test_synthesis_harvest.py  test_synthesis_logging.py  (+36 more)
(+143 files in other folders)
