[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlvr-synth"
version = "0.1.0"
description = "RLVR synthetic data generation harness"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "datasketch>=1.6.0",
    "scipy>=1.12.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
rlvr-synth = "rlvr_synth.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rlvr_synth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
