[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl-task-foundry"
version = "0.1.0"
description = "RL task foundry with OpenAI Agents SDK solver runtime"
requires-python = ">=3.14,<3.15"
dependencies = [
    "openai-agents>=0.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "datasketch>=1.6.0",
    "scipy>=1.12.0",
    "httpx>=0.27.0",
]

[project.scripts]
rl-task-foundry = "rl_task_foundry.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rl_task_foundry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[tool.pyright]
pythonVersion = "3.14"
